Add running exampels fibonacci, nth_prime and power2.

--- a/docs/final_report/.gitignore
+++ b/docs/final_report/.gitignore
@@ -1,5 +1,7 @@
-*.aux
-*.log
-*.out
-*.pdf
-*.toc
+FinalReport.aux
+FinalReport.log
+FinalReport.out
+FinalReport.pdf
+FinalReport.toc
+FinalReport.cb
+FinalReport.cb2
