--- a/main/while-synth.cabal
+++ b/main/while-synth.cabal
@@ -57,8 +57,8 @@ executable while-synth
   other-extensions:    OverloadedStrings, ViewPatterns, GeneralizedNewtypeDeriving
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.8 && <4.9, process >=1.2 && <1.3,
-                       mono-traversable ==0.9.*
+  build-depends:       base >=4.6 && <=4.9, process >=1.1 && <1.3,
+                       mono-traversable ==0.9.*, SafeSemaphore ==0.10.*
   
   -- Directories containing source files.
   -- hs-source-dirs:      
