Fix errors in run_common.lp and elsewhere causing a large grounding. Update the ASP grounding profiler to show distribution of rule bodies.

--- a/main/Makefile
+++ b/main/Makefile
@@ -1,10 +1,12 @@
 GHCFLAGS := -O2 -hidir obj -odir obj
 
 .PHONY: bin/IterativeLearn
+IterativeLearn: bin/IterativeLearn
 bin/IterativeLearn:
 	ghc ${GHCFLAGS} -o $@ IterativeLearn.hs
 
 .PHONY: bin/Profile
+Profile: bin/Profile
 bin/Profile:
 	ghc ${GHCFLAGS} -o $@ Profile.hs
 
