--- a/main/while-synth.cabal
+++ b/main/while-synth.cabal
@@ -59,7 +59,7 @@ executable while-synth
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.6 && <=4.9, process >=1.1 && <1.3,
                        mono-traversable ==0.9.*, SafeSemaphore ==0.10.*,
-                       parsec ==3.1.*
+                       parsec ==3.1.*, attoparsec ==0.13.*, hint ==0.4.*
   
   -- Directories containing source files.
   -- hs-source-dirs:      
