--- a/docs/final_report/Makefile
+++ b/docs/final_report/Makefile
@@ -6,4 +6,8 @@ $(NAME).pdf: $(NAME).tex
 
 .phony: clean
 clean:
-	rm -f $(NAME).{aux,log,out,pdf,toc}
+	rm -f $(NAME).{aux,log,out,pdf,toc,cb,cb2}
+
+.phony: almostclean
+almostclean:
+	rm -f $(NAME).{aux,log,out,toc,cb,cb2}
